refactor: use modernc.org/sqlite on temporary copies of db, get cgo-free, get rid of ory dockertest, fix tests

--- a/tests/sqlite-alpine-appengine-db/Dockerfile
+++ b/tests/sqlite-alpine-appengine-db/Dockerfile
@@ -1,5 +1,6 @@
 FROM alpine:latest
-ARG APPENGDBPATH=/data/app_engine/db
+ARG APPENGDBPATH
+ARG PLATFORMBOXDBNAME
 RUN mkdir -p ${APPENGDBPATH} && echo "HOLA" > /canary && mkdir -p ${APPENGDBPATH}/not.a.db
-COPY test-apps-and-device.db ${APPENGDBPATH}/platformbox.db
-ENTRYPOINT ["/bin/sh", "-c", "i=60; while [ $i -ne 0 ]; do sleep 1; i=$(($i-1)); done"]
+COPY test-apps-and-device.db ${APPENGDBPATH}/${PLATFORMBOXDBNAME}
+ENTRYPOINT ["/bin/sh", "-c", "while true; do sleep 1; done"]
