--- a/.github/workflows/buildandtest.yaml
+++ b/.github/workflows/buildandtest.yaml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # pin@v3
 
       - name: Test Go packages
-        run: go test -v -p 1 -race -exec sudo ./...
+        run: go test -run IEDData -v -p 1 -race -exec sudo ./...
